GF-57274: Add Tooltip/ContextualPopup to VideoPlayer samples for testing.  Ensure more components are vertically-aligned. DCO-1.1-Signed-Off-By: Kevin Schaaf <kevin.schaaf@lge.com>

--- a/css/moonstone-light.css
+++ b/css/moonstone-light.css
@@ -4015,6 +4015,9 @@
   border-left: 2px solid white;
   padding-left: 5px;
 }
+.moon-video-player-more-controls > * {
+  vertical-align: middle;
+}
 .enyo-locale-right-to-left .moon-video-player-more-controls > * {
   direction: rtl;
 }
